# stockapp_haskell

./: stack.yaml  webproj.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/1933fd2f/: cabal_macros.h
.stack-work/ghci/2157f538/: cabal_macros.h
.stack-work/ghci/2fc19d53/: cabal_macros.h
.stack-work/ghci/35a9c210/: cabal_macros.h
.stack-work/ghci/4a45c46a/: cabal_macros.h
.stack-work/ghci/5b573fed/: cabal_macros.h
.stack-work/ghci/7f172137/: cabal_macros.h
.stack-work/ghci/93c3d521/: cabal_macros.h
.stack-work/ghci/943bb658/: cabal_macros.h
.stack-work/ghci/9d87e5ca/: cabal_macros.h
.stack-work/ghci/dc17fbb0/: cabal_macros.h
src/: Main.hs  Monadtest.hs
