name:                webproj
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/webproj#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable webproj
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , Spock
                    , http-types
                    , text
                    , mtl
                    , lucid
                    , Spock-lucid,aeson,bytestring,
                        http-conduit,Chart,Chart-cairo,time,Spock-core,wai-middleware-static
